freefare/lib/src/ffi/libfreefare.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Auto-generated, internal bindings to freefare
class NativeLibrary {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeLibrary(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeLibrary.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void nfc_init(
    ffi.Pointer<ffi.Pointer<nfc_context>> context,
  ) {
    return _nfc_init(
      context,
    );
  }

  late final _nfc_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Pointer<nfc_context>>)>>('nfc_init');
  late final _nfc_init = _nfc_initPtr
      .asFunction<void Function(ffi.Pointer<ffi.Pointer<nfc_context>>)>();

  void nfc_exit(
    ffi.Pointer<nfc_context> context,
  ) {
    return _nfc_exit(
      context,
    );
  }

  late final _nfc_exitPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<nfc_context>)>>(
          'nfc_exit');
  late final _nfc_exit =
      _nfc_exitPtr.asFunction<void Function(ffi.Pointer<nfc_context>)>();

  int nfc_register_driver(
    ffi.Pointer<nfc_driver> driver,
  ) {
    return _nfc_register_driver(
      driver,
    );
  }

  late final _nfc_register_driverPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<nfc_driver>)>>(
          'nfc_register_driver');
  late final _nfc_register_driver = _nfc_register_driverPtr
      .asFunction<int Function(ffi.Pointer<nfc_driver>)>();

  ffi.Pointer<nfc_device> nfc_open(
    ffi.Pointer<nfc_context> context,
    ffi.Pointer<ffi.Char> connstring,
  ) {
    return _nfc_open(
      context,
      connstring,
    );
  }

  late final _nfc_openPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<nfc_device> Function(
              ffi.Pointer<nfc_context>, ffi.Pointer<ffi.Char>)>>('nfc_open');
  late final _nfc_open = _nfc_openPtr.asFunction<
      ffi.Pointer<nfc_device> Function(
          ffi.Pointer<nfc_context>, ffi.Pointer<ffi.Char>)>();

  void nfc_close(
    ffi.Pointer<nfc_device> pnd,
  ) {
    return _nfc_close(
      pnd,
    );
  }

  late final _nfc_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<nfc_device>)>>(
          'nfc_close');
  late final _nfc_close =
      _nfc_closePtr.asFunction<void Function(ffi.Pointer<nfc_device>)>();

  int nfc_abort_command(
    ffi.Pointer<nfc_device> pnd,
  ) {
    return _nfc_abort_command(
      pnd,
    );
  }

  late final _nfc_abort_commandPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<nfc_device>)>>(
          'nfc_abort_command');
  late final _nfc_abort_command =
      _nfc_abort_commandPtr.asFunction<int Function(ffi.Pointer<nfc_device>)>();

  int nfc_list_devices(
    ffi.Pointer<nfc_context> context,
    ffi.Pointer<ffi.Pointer<ffi.Char>> connstrings,
    int connstrings_len,
  ) {
    return _nfc_list_devices(
      context,
      connstrings,
      connstrings_len,
    );
  }

  late final _nfc_list_devicesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Size Function(
              ffi.Pointer<nfc_context>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Size)>>('nfc_list_devices');
  late final _nfc_list_devices = _nfc_list_devicesPtr.asFunction<
      int Function(
          ffi.Pointer<nfc_context>, ffi.Pointer<ffi.Pointer<ffi.Char>>, int)>();

  int nfc_idle(
    ffi.Pointer<nfc_device> pnd,
  ) {
    return _nfc_idle(
      pnd,
    );
  }

  late final _nfc_idlePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<nfc_device>)>>(
          'nfc_idle');
  late final _nfc_idle =
      _nfc_idlePtr.asFunction<int Function(ffi.Pointer<nfc_device>)>();

  int nfc_initiator_init(
    ffi.Pointer<nfc_device> pnd,
  ) {
    return _nfc_initiator_init(
      pnd,
    );
  }

  late final _nfc_initiator_initPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<nfc_device>)>>(
          'nfc_initiator_init');
  late final _nfc_initiator_init = _nfc_initiator_initPtr
      .asFunction<int Function(ffi.Pointer<nfc_device>)>();

  int nfc_initiator_init_secure_element(
    ffi.Pointer<nfc_device> pnd,
  ) {
    return _nfc_initiator_init_secure_element(
      pnd,
    );
  }

  late final _nfc_initiator_init_secure_elementPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<nfc_device>)>>(
          'nfc_initiator_init_secure_element');
  late final _nfc_initiator_init_secure_element =
      _nfc_initiator_init_secure_elementPtr
          .asFunction<int Function(ffi.Pointer<nfc_device>)>();

  int nfc_initiator_select_passive_target(
    ffi.Pointer<nfc_device> pnd,
    nfc_modulation nm,
    ffi.Pointer<ffi.Uint8> pbtInitData,
    int szInitData,
    ffi.Pointer<nfc_target> pnt,
  ) {
    return _nfc_initiator_select_passive_target(
      pnd,
      nm,
      pbtInitData,
      szInitData,
      pnt,
    );
  }

  late final _nfc_initiator_select_passive_targetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<nfc_device>,
              nfc_modulation,
              ffi.Pointer<ffi.Uint8>,
              ffi.Size,
              ffi.Pointer<nfc_target>)>>('nfc_initiator_select_passive_target');
  late final _nfc_initiator_select_passive_target =
      _nfc_initiator_select_passive_targetPtr.asFunction<
          int Function(ffi.Pointer<nfc_device>, nfc_modulation,
              ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<nfc_target>)>();

  int nfc_initiator_list_passive_targets(
    ffi.Pointer<nfc_device> pnd,
    nfc_modulation nm,
    ffi.Pointer<nfc_target> ant,
    int szTargets,
  ) {
    return _nfc_initiator_list_passive_targets(
      pnd,
      nm,
      ant,
      szTargets,
    );
  }

  late final _nfc_initiator_list_passive_targetsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<nfc_device>,
              nfc_modulation,
              ffi.Pointer<nfc_target>,
              ffi.Size)>>('nfc_initiator_list_passive_targets');
  late final _nfc_initiator_list_passive_targets =
      _nfc_initiator_list_passive_targetsPtr.asFunction<
          int Function(ffi.Pointer<nfc_device>, nfc_modulation,
              ffi.Pointer<nfc_target>, int)>();

  int nfc_initiator_poll_target(
    ffi.Pointer<nfc_device> pnd,
    ffi.Pointer<nfc_modulation> pnmTargetTypes,
    int szTargetTypes,
    int uiPollNr,
    int uiPeriod,
    ffi.Pointer<nfc_target> pnt,
  ) {
    return _nfc_initiator_poll_target(
      pnd,
      pnmTargetTypes,
      szTargetTypes,
      uiPollNr,
      uiPeriod,
      pnt,
    );
  }

  late final _nfc_initiator_poll_targetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<nfc_device>,
              ffi.Pointer<nfc_modulation>,
              ffi.Size,
              ffi.Uint8,
              ffi.Uint8,
              ffi.Pointer<nfc_target>)>>('nfc_initiator_poll_target');
  late final _nfc_initiator_poll_target =
      _nfc_initiator_poll_targetPtr.asFunction<
          int Function(ffi.Pointer<nfc_device>, ffi.Pointer<nfc_modulation>,
              int, int, int, ffi.Pointer<nfc_target>)>();

  int nfc_initiator_select_dep_target(
    ffi.Pointer<nfc_device> pnd,
    int ndm,
    int nbr,
    ffi.Pointer<nfc_dep_info> pndiInitiator,
    ffi.Pointer<nfc_target> pnt,
    int timeout,
  ) {
    return _nfc_initiator_select_dep_target(
      pnd,
      ndm,
      nbr,
      pndiInitiator,
      pnt,
      timeout,
    );
  }

  late final _nfc_initiator_select_dep_targetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<nfc_device>,
              ffi.Int32,
              ffi.Int32,
              ffi.Pointer<nfc_dep_info>,
              ffi.Pointer<nfc_target>,
              ffi.Int)>>('nfc_initiator_select_dep_target');
  late final _nfc_initiator_select_dep_target =
      _nfc_initiator_select_dep_targetPtr.asFunction<
          int Function(ffi.Pointer<nfc_device>, int, int,
              ffi.Pointer<nfc_dep_info>, ffi.Pointer<nfc_target>, int)>();

  int nfc_initiator_poll_dep_target(
    ffi.Pointer<nfc_device> pnd,
    int ndm,
    int nbr,
    ffi.Pointer<nfc_dep_info> pndiInitiator,
    ffi.Pointer<nfc_target> pnt,
    int timeout,
  ) {
    return _nfc_initiator_poll_dep_target(
      pnd,
      ndm,
      nbr,
      pndiInitiator,
      pnt,
      timeout,
    );
  }

  late final _nfc_initiator_poll_dep_targetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<nfc_device>,
              ffi.Int32,
              ffi.Int32,
              ffi.Pointer<nfc_dep_info>,
              ffi.Pointer<nfc_target>,
              ffi.Int)>>('nfc_initiator_poll_dep_target');
  late final _nfc_initiator_poll_dep_target =
      _nfc_initiator_poll_dep_targetPtr.asFunction<
          int Function(ffi.Pointer<nfc_device>, int, int,
              ffi.Pointer<nfc_dep_info>, ffi.Pointer<nfc_target>, int)>();

  int nfc_initiator_deselect_target(
    ffi.Pointer<nfc_device> pnd,
  ) {
    return _nfc_initiator_deselect_target(
      pnd,
    );
  }

  late final _nfc_initiator_deselect_targetPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<nfc_device>)>>(
          'nfc_initiator_deselect_target');
  late final _nfc_initiator_deselect_target = _nfc_initiator_deselect_targetPtr
      .asFunction<int Function(ffi.Pointer<nfc_device>)>();

  int nfc_initiator_transceive_bytes(
    ffi.Pointer<nfc_device> pnd,
    ffi.Pointer<ffi.Uint8> pbtTx,
    int szTx,
    ffi.Pointer<ffi.Uint8> pbtRx,
    int szRx,
    int timeout,
  ) {
    return _nfc_initiator_transceive_bytes(
      pnd,
      pbtTx,
      szTx,
      pbtRx,
      szRx,
      timeout,
    );
  }

  late final _nfc_initiator_transceive_bytesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<nfc_device>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Size,
              ffi.Pointer<ffi.Uint8>,
              ffi.Size,
              ffi.Int)>>('nfc_initiator_transceive_bytes');
  late final _nfc_initiator_transceive_bytes =
      _nfc_initiator_transceive_bytesPtr.asFunction<
          int Function(ffi.Pointer<nfc_device>, ffi.Pointer<ffi.Uint8>, int,
              ffi.Pointer<ffi.Uint8>, int, int)>();

  int nfc_initiator_transceive_bits(
    ffi.Pointer<nfc_device> pnd,
    ffi.Pointer<ffi.Uint8> pbtTx,
    int szTxBits,
    ffi.Pointer<ffi.Uint8> pbtTxPar,
    ffi.Pointer<ffi.Uint8> pbtRx,
    int szRx,
    ffi.Pointer<ffi.Uint8> pbtRxPar,
  ) {
    return _nfc_initiator_transceive_bits(
      pnd,
      pbtTx,
      szTxBits,
      pbtTxPar,
      pbtRx,
      szRx,
      pbtRxPar,
    );
  }

  late final _nfc_initiator_transceive_bitsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<nfc_device>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Size,
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Size,
              ffi.Pointer<ffi.Uint8>)>>('nfc_initiator_transceive_bits');
  late final _nfc_initiator_transceive_bits =
      _nfc_initiator_transceive_bitsPtr.asFunction<
          int Function(
              ffi.Pointer<nfc_device>,
              ffi.Pointer<ffi.Uint8>,
              int,
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint8>,
              int,
              ffi.Pointer<ffi.Uint8>)>();
